added test for CarRentalCarController.php and modified the swagger doc
